force-app/main/default/objects/Payment_Schedule__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>Billing</label>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>