force-app/main/default/objects/Payment_Schedule__c/fields/Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Name__c</fullName>
    <formula>IF( Billing__r.Billing_Last_Name__c != null ,  Billing__r.Billing_First_Name__c +&apos; &apos;+ Billing__r.Billing_Last_Name__c ,  IF( Billing__r.AcctSeed__Billing_Contact__c != null , Billing__r.AcctSeed__Billing_Contact__r.Contact_Full_Name__c,  Name_On_Payment_Method__c ) )</formula>
    <label>Billing Contact Name</label>
    <type>Text</type>
</CustomField>