force-app/main/default/objects/Payment_Schedule__c/fields/Cardknox_Token__c.field-meta.xml
<CustomField>
    <fullName>Cardknox_Token__c</fullName>
    <formula>Payment_Method__r.AcctSeed__External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cardknox Token</label>
    <type>Text</type>
</CustomField>