force-app/main/default/objects/Payment_Schedule__c/fields/Cash_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Cash_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Receipt</label>
    <referenceTo>AcctSeed__Cash_Receipt__c</referenceTo>
    <relationshipLabel>Payment Schedules</relationshipLabel>
    <relationshipName>Payment_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>