force-app/main/default/objects/Payment_Schedule__c/fields/Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Due_Amount__c</fullName>
    <formula>Amount__c  -  Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>