force-app/main/default/objects/Payment_Schedule__c/fields/Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_4_Digits__c</fullName>
    <formula>Payment_Method__r.AcctSeed__Last_Four_Digits__c</formula>
    <label>Last 4 Digits</label>
    <type>Text</type>
</CustomField>