force-app/main/default/objects/Payment_Schedule__c/fields/Manual_Attention_Required__c.field-meta.xml
<CustomField>
    <fullName>Manual_Attention_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Attention Required</label>
    <type>Checkbox</type>
</CustomField>