force-app/main/default/objects/Payment_Schedule__c/fields/Name_On_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Name_On_Payment_Method__c</fullName>
    <formula>IF( ISPICKVAL(  Fiserv_Payment_Method__r.Type__c  , &apos;Credit_Card&apos;) ,   Fiserv_Payment_Method__r.Name_On_Card__c  ,   Fiserv_Payment_Method__r.Card_Holder_Name__c  )</formula>
    <label>Name On Payment Method</label>
    <type>Text</type>
</CustomField>