force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <formula>Billing__r.AcctSeed__Payment_Link__c</formula>
    <label>Payment Link</label>
    <type>Text</type>
</CustomField>