force-app/main/default/objects/Payment_Schedule__c/fields/Payment_Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Type__c</fullName>
    <label>Payment Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eCheck</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Physical Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>