force-app/main/default/objects/Payment_Schedule__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <formula>Billing__r.Policy_Number__c</formula>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>