force-app/main/default/objects/Payment_Schedule__c/fields/Service_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Amount__c</fullName>
    <formula>IF(ISPICKVAL( Fiserv_Payment_Method__r.Type__c  , &apos;Credit_Card&apos;)  , (Amount__c *  Service_Fee_Rate__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>