force-app/main/default/objects/Payment_Schedule__c/fields/Service_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Rate__c</fullName>
    <label>Service Fee Rate</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>