force-app/main/default/objects/Payment_Schedule__c/fields/Settled_Date__c.field-meta.xml
<CustomField>
    <fullName>Settled_Date__c</fullName>
    <label>Settled Date</label>
    <type>Date</type>
</CustomField>