force-app/main/default/objects/Payment_Schedule__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Payment_Method__r.AcctSeed__Payment_Method_Type__c, &apos;Credit Card&apos;),  (Amount__c * (1+ Service_Fee_Rate__c)) ,  Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>