force-app/main/default/objects/Payment_Schedule__c/fields/Webhook_JSON__c.field-meta.xml
<CustomField>
    <fullName>Webhook_JSON__c</fullName>
    <label>Webhook JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>