force-app/main/default/objects/Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Service_Fee_Amount__c</columns>
    <columns>Cash_Receipt__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Frequency__c</columns>
    <columns>Service_Fee_Rate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>